<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">ADD</string>
    <string name="add_account">Add Account</string>
    <string name="always_approve">Always Approve</string>
    <string name="always_approved">Always Approved</string>
    <string name="always_ask">Ask for approval everytime</string>
    <string name="app_name">Aarogya Setu</string>
    <string name="app_permissions">App Permissions</string>
    <string name="app_version">App Version %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approval_notification_title">Request to Access Aarogya Setu Status</string>
    <string name="approval_request_time_interval" formatted="false">"This request is from %s to %s "</string>
    <string name="approval_request_title" formatted="false">%s has requested for your %s status</string>
    <string name="approval_request_with_reason_and_time_title" formatted="false">%s has requested for your %s status from %s to %s for %s</string>
    <string name="approval_request_with_reason_title" formatted="false">%s has requested for your %s status for %s</string>
    <string name="approvals">Approvals</string>
    <string name="approvals_no_preference_summary">Currently there are no external apps accessing your Aarogya Setu status.</string>
    <string name="approvals_no_user_preference_summary">Currently there are no external users accessing your Aarogya Setu status.</string>
    <string name="approvals_preference">Approval Preferences</string>
    <string name="approvals_preference_summary">External apps that can access your Aarogya Setu status only.</string>
    <string name="approvals_preference_title">Approval for Aarogya Setu Status</string>
    <string name="approve">Approve</string>
    <string name="approved">Approved</string>
    <string name="apps">APPS</string>
    <string name="auth_error_invalid_otp">The OTP you have entered is incorrect</string>
    <string name="auth_error_unknown">There is some error logging you in</string>
    <string name="auth_error_user_disabled">You are not allowed to sign in</string>
    <string name="auto_approved">Auto Approved</string>
    <string name="auto_rejected">Auto Rejected</string>
    <string name="block">Block</string>
    <string name="blocked">Blocked</string>
    <string name="bluetooth">&lt;b>Bluetooth&lt;/b></string>
    <string name="bluetooth_and_gps">Bluetooth &amp; Location</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="call_helpline">Call Helpline (1075)</string>
    <string name="call_helpline_detail">Health ministry toll-free helpline for queries related to COVID-19</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="code">Code</string>
    <string name="code_valid_for">Code valid for 45 min</string>
    <string name="com.crashlytics.android.build_id">39a7cb14-a2f1-4cc9-8ea2-0733350c0a83</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_scanning_error">Some error occurred.Please scan again.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_and_proceed">Confirm &amp; Proceed</string>
    <string name="contribute_to_a_safer_india">I Agree</string>
    <string name="copy">Copy</string>
    <string name="country_code">+91</string>
    <string name="cowin_20_tracks_through">"&lt;b>Aarogya Setu&lt;/b> tracks through a Bluetooth &amp;amp; Location 
generated social graph, your interaction 
with someone who could have tested 
COVID-19 positive."</string>
    <string name="data_sharing_with_the_ministry">&lt;b>Data Sharing&lt;/b></string>
    <string name="default_web_client_id">645345756042-uh49l2v1sj4lj97cl07l08ard3oad27d.apps.googleusercontent.com</string>
    <string name="define_zxingandroidembedded" />
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirm">To continue deleting your account, please confirm your mobile number</string>
    <string name="delete_account_summary">"You can permanently delete your account and wipe all data. "</string>
    <string name="delete_account_title">Delete My Account</string>
    <string name="device_location">&lt;b>Device Location&lt;/b></string>
    <string name="didnt_initiate_request">I didn’t initiate this request</string>
    <string name="each_one_of_us">"Each one of us has the power to help 
prevent the spread of the Coronavirus 
pandemic in India."</string>
    <string name="enter_code">Enter code</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_location">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="generate_code">Generate Code</string>
    <string name="get_code_detail">Get the unique code from account holder in order to verify and add</string>
    <string name="hamburger_menu_intro">A lot of Features like Helpline, Privacy Policy, Terms of Use and more can be found here.</string>
    <string name="i_understand">I Understand</string>
    <string name="image_back_content_description">Back</string>
    <string name="image_close_content_description">@string/close</string>
    <string name="image_language_change_content_description">Change Language</string>
    <string name="image_menu_content_description">Menu</string>
    <string name="image_share_content_description">Share Application</string>
    <string name="keep_a_check_on_app">You can keep a check on Aarogya Setu status of your close ones from one place.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="other">Other</string>
    <string name="registered_mobile_detail">Enter mobile number of person, with whom you want to share your Aarogya Setu status</string>
    <string name="report">Report</string>
    <string name="report_abuse_detail">Help us understand the issue</string>
    <string name="report_abuse_title">What is wrong with this request?</string>
    <string name="sample_collected_for_testing">Sample Collected for Testing</string>
    <string name="suspicious_spam">It’s suspicious or spam</string>
    <string name="sync_data_detail">Your data is always saved on your phone. Share it on secure Government Servers if…</string>
    <string name="sync_data_user_consent">To refine the accuracy of contacts tracing results upload your data to secure servers of Government of India.</string>
    <string name="syncing_data">Syncing Data</string>
    <string name="syncing_data_detail">Sending interaction data captured with Bluetooth &amp; Location services to Government of India.</string>
    <string name="tested_positive">Tested Positive for Covid19</string>
    <string name="text_value">"Say, you met someone a week back at a gathering or were in close proximity of someone unknown at a public place, and in a few days, they test positive for COVID-19.

The Government of India will trace back all touch points of that person, through the active devices with the app installed that were in close radius of that person, in the past 14 days. 

A notification will then be sent to all such contacts with an advisory on further course of action, to self-isolate or to get the test done at a nearest testing centre, as needed. 

By participating in active contact tracing, you will help us minimise the spread of COVID-19 and enable Government of India to implement proactive measures for your health and well-being. 

"</string>
    <string name="verify_and_add">Verify and Add</string>
    <string name="your_mobile_number_is_required_to_know_your_identity">Your mobile number is required for contact tracing.</string>
</resources>