<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:tag="layout/generate_code_layout_0" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/enter_mobile_number" android:layout_toEndOf="@id/close" style="@style/TextStyleFontSemiBold" />
    <ImageView android:id="@id/close" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_close_24px" android:contentDescription="@string/image_close_content_description" />
    <com.google.android.material.textfield.TextInputLayout android:id="@id/phone_number_layout" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/mobile_number" android:layout_below="@id/close" app:boxBackgroundMode="outline" app:helperTextTextColor="@color/black" app:hintAnimationEnabled="true" app:hintEnabled="true" app:hintTextColor="@color/blue" app:prefixText="@string/country_code" app:prefixTextColor="@color/black">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/phone_num" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="10" android:inputType="phone" android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar android:id="@id/progress_bar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:indeterminate="true" android:indeterminateOnly="true" android:layout_below="@id/phone_number_layout" android:indeterminateTint="@color/blue" style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
    <TextView android:textSize="16.0sp" android:textColor="@color/black" android:id="@id/tv_mobile_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/registered_mobile_detail" android:layout_below="@id/progress_bar" />
    <Button android:id="@id/validate_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/generate_code" android:layout_below="@id/tv_mobile_detail" android:layout_centerHorizontal="true" />
</RelativeLayout>