<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/dialog_sync_data_state_0" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="end" android:id="@id/close" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_close_24px" android:contentDescription="@string/close" />
    <ImageView android:layout_gravity="center" android:id="@id/ic_state" android:layout_width="36.0dip" android:layout_height="36.0dip" android:src="@drawable/ic_syncing" android:contentDescription="@null" />
    <androidx.appcompat.widget.AppCompatTextView android:id="@id/tv_sync_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/syncing_data" android:textAlignment="center" style="@style/TextStyleFontSemiBold" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/black" android:id="@id/tv_sync_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/syncing_data_detail" android:textAlignment="center" android:layout_marginStart="28.0dip" android:layout_marginEnd="28.0dip" />
    <Button android:textSize="14.0sp" android:layout_gravity="center" android:id="@id/btn_sync" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/cancel" android:backgroundTint="@color/greyish_brown" />
</LinearLayout>