<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/dialog_sync_data_consent_0" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="end" android:id="@id/close" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_close_24px" android:contentDescription="@string/close" />
    <androidx.appcompat.widget.AppCompatTextView android:id="@id/tv_sync_consent_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="28.0dip" android:text="@string/sync_data_user_consent" android:textAlignment="center" style="@style/TextStyleFontSemiBold" />
    <Button android:textSize="14.0sp" android:layout_gravity="center" android:id="@id/btn_confirm_and_proceed" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/confirm_and_proceed" android:backgroundTint="@color/sync_warning" />
</LinearLayout>