<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/dialog_approval_report_abuse_0" android:background="@drawable/bg_blue_round_6dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:backgroundTint="@color/white"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="end" android:id="@id/close" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_close_24px" android:contentDescription="@string/close" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/dark_two" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/report_abuse_title" android:layout_marginStart="22.0dip" android:layout_marginEnd="22.0dip" style="@style/TextStyleFontSemiBold" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/greyish_brown" android:id="@id/tv_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/report_abuse_detail" android:layout_marginStart="22.0dip" android:layout_marginEnd="22.0dip" />
        <RadioGroup android:id="@id/rg_report_option" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="22.0dip" android:layout_marginEnd="22.0dip">
            <androidx.appcompat.widget.AppCompatRadioButton android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/rb_didnt_initiate_request" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/didnt_initiate_request" android:paddingStart="22.0dip" android:paddingEnd="0.0dip" android:buttonTint="@drawable/blue_radio_button" />
            <View android:id="@id/divider_didnt_initiate_request" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginStart="48.0dip" android:layout_marginEnd="12.0dip" />
            <androidx.appcompat.widget.AppCompatRadioButton android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/rb_suspicious_spam" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/suspicious_spam" android:paddingStart="22.0dip" android:paddingEnd="0.0dip" android:buttonTint="@drawable/blue_radio_button" />
            <View android:id="@id/divider_suspicious_spam" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginStart="48.0dip" android:layout_marginEnd="12.0dip" />
            <androidx.appcompat.widget.AppCompatRadioButton android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/rb_other" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/other" android:paddingStart="22.0dip" android:paddingEnd="0.0dip" android:buttonTint="@drawable/blue_radio_button" />
            <View android:id="@id/divider_other" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginStart="48.0dip" android:layout_marginEnd="12.0dip" />
            <androidx.appcompat.widget.AppCompatRadioButton android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/rb_block" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/block" android:paddingStart="22.0dip" android:paddingEnd="0.0dip" android:buttonTint="@drawable/blue_radio_button" />
        </RadioGroup>
        <Button android:textSize="16.0sp" android:layout_gravity="center" android:id="@id/btn_report" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/report" android:backgroundTint="@color/greyish_brown" style="@style/TextStyleFontSemiBold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <ProgressBar android:layout_gravity="center" android:id="@id/progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateTint="@color/blue" />
</FrameLayout>