<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/dialog_sync_data_0" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="end" android:id="@id/close" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_close_24px" android:contentDescription="@string/close" />
    <ImageView android:layout_gravity="center" android:id="@id/iv_sync_data" android:layout_width="64.0dip" android:layout_height="64.0dip" android:src="@drawable/ic_sync_data" android:contentDescription="@null" />
    <androidx.appcompat.widget.AppCompatTextView android:id="@id/tv_sync_data_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/sync_data_detail" android:textAlignment="center" android:layout_marginStart="28.0dip" android:layout_marginEnd="28.0dip" style="@style/TextStyleFontSemiBold" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/sync_warning" android:layout_gravity="center" android:id="@id/btn_being_tested" android:background="@drawable/button_border_red" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/sample_collected_for_testing" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" style="@style/TextStyleFontSemiBold" />
    <Button android:layout_gravity="center" android:id="@id/btn_tested_positive" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/tested_positive" android:backgroundTint="@color/sync_warning" />
</LinearLayout>