<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:tag="layout/fragment_why_needed_0" android:background="@drawable/rounded_background" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="100.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/close" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_close_24px" android:contentDescription="@string/image_close_content_description" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="20.0sp" android:textColor="@color/black" android:id="@id/tv_mobile_no_required" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/your_mobile_number_is_required_to_know_your_identity" android:layout_marginEnd="10.0dip" app:layout_constraintTop_toBottomOf="@id/close" style="@style/TextStyleFontSemiBold" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="14.0sp" android:id="@id/tv_say_you_met_someone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/text_value" app:layout_constraintStart_toStartOf="@id/tv_mobile_no_required" app:layout_constraintTop_toBottomOf="@id/tv_mobile_no_required" />
    <Button android:textColor="@color/white" android:id="@id/i_understand" android:background="@drawable/button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/i_understand" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_say_you_met_someone" />
    <View android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="50.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/i_understand" />
</androidx.constraintlayout.widget.ConstraintLayout>