<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:id="@id/drawer" android:tag="layout/activity_home_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/menu" android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_menu_black" android:layout_alignBottom="@id/divider" android:layout_alignParentTop="true" android:contentDescription="@string/image_menu_content_description" android:layout_marginStart="8.0dip" android:layout_alignParentStart="true" />
        <ImageView android:id="@id/menu_notify" android:visibility="gone" android:layout_width="8.0dip" android:layout_height="8.0dip" android:layout_marginTop="18.0dip" android:src="@drawable/bg_label" android:layout_alignTop="@id/menu" android:contentDescription="@null" android:layout_marginEnd="8.0dip" android:layout_alignEnd="@id/menu" />
        <ImageView android:id="@id/back" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="24.0dip" android:src="@drawable/ic_back" android:layout_alignBottom="@id/divider" android:layout_alignParentTop="true" android:contentDescription="@string/image_back_content_description" android:layout_marginStart="16.0dip" android:layout_toEndOf="@id/menu" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_alignBottom="@id/divider" android:layout_alignParentTop="true" android:layout_marginStart="16.0dip" android:layout_marginEnd="8.0dip" android:layout_toStartOf="@id/share" android:layout_toEndOf="@id/back" style="@style/TextStyleFontSemiBold" />
        <ImageView android:layout_gravity="end|center" android:id="@id/language_change" android:background="?selectableItemBackgroundBorderless" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_language_change" android:layout_alignBottom="@id/divider" android:layout_alignParentTop="true" android:contentDescription="@string/image_language_change_content_description" android:layout_marginEnd="8.0dip" android:layout_alignParentEnd="true" />
        <ImageView android:id="@id/share" android:background="?selectableItemBackgroundBorderless" android:padding="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_share" android:layout_alignBottom="@id/divider" android:layout_alignParentTop="true" android:contentDescription="@string/image_share_content_description" android:layout_toStartOf="@id/language_change" />
        <View android:id="@id/divider" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="60.0dip" android:layout_alignParentTop="true" />
        <WebView android:id="@id/webView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/divider" />
        <LinearLayout android:id="@id/hamburger_menu_intro" android:background="@drawable/background_blue" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:layout_toStartOf="@id/language_change" android:layout_alignParentStart="true">
            <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/hamburger_menu_intro" android:layout_weight="1.0" />
            <ImageView android:id="@id/close_menu_intro" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_margin="8.0dip" android:src="@drawable/ic_close_white" android:contentDescription="@string/image_close_content_description" />
        </LinearLayout>
        <ProgressBar android:layout_gravity="center" android:id="@id/progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:indeterminateTint="@color/blue" />
        <FrameLayout android:id="@id/frame_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </RelativeLayout>
    <nic.goi.aarogyasetu.views.HomeNavigationView android:layout_gravity="start" android:id="@id/navigation_drawer" android:layout_width="wrap_content" android:layout_height="fill_parent" />
</androidx.drawerlayout.widget.DrawerLayout>